crates/glyph-cli/tests/corpus/invalid/case_insensitive_context.glyph
skill demo()
    description: "Demo."
    Context: "inline context"
    flow:
        "Do."
